--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
 <!-- <app-root></app-root> -->
-<app-meals></app-meals>
-<!-- <app-forms (addMeals)="mealAdded($event)"></app-forms>
-<div>
-  <h1>My Goals</h1>
-  <hr>
-  <ul>
-      <li *ngFor='let meal of meals'>
-        {{meal.mealName}}
-        {{meal.calories}}
-        {{meal.details}}
-        <button (click)="deleteMeal(meals[index])">del</button>
-      </li>
-  </ul>
-  
-</div> -->
+<!-- <app-about></app-about>
+<app-meals></app-meals> -->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
